tests/baselines/reference/objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3(strict=true).errors.txt
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(5,13): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(6,13): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(15,59): error TS2322: Type 'null' is not assignable to type 'string'.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(19,31): error TS2322: Type 'null' is not assignable to type 'string'.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(23,31): error TS2322: Type 'null' is not assignable to type 'string'.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(27,31): error TS2322: Type 'null' is not assignable to type 'string'.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(41,10): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(42,10): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(45,10): error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(46,10): error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(49,10): error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(50,10): error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(53,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(54,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(57,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(58,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(61,10): error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(62,10): error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(65,10): error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(66,10): error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(69,10): error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(70,10): error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(73,10): error TS7010: 'foo5c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(74,10): error TS7010: 'foo5c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(77,10): error TS7010: 'foo6c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(78,10): error TS7010: 'foo6c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(81,10): error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(82,10): error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(85,10): error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(86,10): error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(89,10): error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(90,10): error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(93,10): error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(94,10): error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(97,10): error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(98,10): error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(101,10): error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(102,10): error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(105,10): error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(106,10): error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(109,10): error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(110,10): error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(113,10): error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(114,10): error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(117,10): error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(118,10): error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(121,10): error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts(122,10): error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.


==== objectTypesIdentityWithGenericCallSignaturesDifferingByConstraints3.ts (48 errors) ====
    // Two call or construct signatures are considered identical when they have the same number of type parameters and, considering those 
    // parameters pairwise identical, have identical type parameter constraints, identical number of parameters with identical kind(required, 
    // optional or rest) and types, and identical return types.
    
    class One { foo: string }
                ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    class Two { foo: string }
                ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    interface Three { foo: string }
    interface Four<T> { foo: T }
    interface Five<T> extends Four<T> { }
    interface Six<T, U> {
        foo: T;
    }
    
    class A {
        foo<T extends U, U extends One>(x: T, y: U): string { return null; }
                                                              ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
    }
    
    class B<T extends U, U extends Two> {
        foo(x: T, y: U): string { return null; }
                                  ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
    }
    
    class C<T extends U, U extends Three> {
        foo(x: T, y: U): string { return null; }
                                  ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
    }
    
    class D<T extends U, U extends Four<string>> {
        foo(x: T, y: U): string { return null; }
                                  ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
    }
    
    interface I<T extends U, U extends Five<string>> {
        foo(x: T, y: U): string;
    }
    
    interface I2 {
        foo<T extends U, U extends Six<string, string>>(x: T, y: U): string;
    }
    
    var a: { foo<T extends U, U extends One>(x: T, y: U): string }
    var b = { foo<T extends U, U extends Two>(x: T, y: U) { return ''; } };
    
    function foo1(x: A);
             ~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1(x: A); // error
             ~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1(x: any) { }
    
    function foo1b(x: B<Two, Two>);
             ~~~~~
!!! error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1b(x: B<Two, Two>); // error
             ~~~~~
!!! error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1b(x: any) { }
    
    function foo1c(x: C<Three, Three>);
             ~~~~~
!!! error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1c(x: C<Three, Three>); // error
             ~~~~~
!!! error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1c(x: any) { }
    
    function foo2(x: I<Five<string>, Five<string>>);
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: I<Five<string>, Five<string>>); // error
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: any) { }
    
    function foo3(x: typeof a);
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: typeof a); // error
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: any) { }
    
    function foo4(x: typeof b);
             ~~~~
!!! error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo4(x: typeof b); // error
             ~~~~
!!! error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo4(x: any) { }
    
    function foo5(x: A);
             ~~~~
!!! error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5(x: B<Two, Two>); // ok
             ~~~~
!!! error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5(x: any) { }
    
    function foo5b(x: A);
             ~~~~~
!!! error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5b(x: C<Three, Three>); // ok
             ~~~~~
!!! error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5b(x: any) { }
    
    function foo5c(x: C<Three, Three>);
             ~~~~~
!!! error TS7010: 'foo5c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5c(x: D<Four<string>, Four<string>>); // error
             ~~~~~
!!! error TS7010: 'foo5c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5c(x: any) { }
    
    function foo6c(x: C<Three, Three>);
             ~~~~~
!!! error TS7010: 'foo6c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo6c(x: D<Four<string>, Four<string>>); // error
             ~~~~~
!!! error TS7010: 'foo6c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo6c(x: any) { }
    
    function foo6(x: A);
             ~~~~
!!! error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo6(x: I<Five<string>, Five<string>>); // ok
             ~~~~
!!! error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo6(x: any) { }
    
    function foo7(x: A);
             ~~~~
!!! error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo7(x: typeof a); // error
             ~~~~
!!! error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo7(x: any) { }
    
    function foo8(x: B<Two, Two>);
             ~~~~
!!! error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo8(x: I<Five<string>, Five<string>>); // error
             ~~~~
!!! error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo8(x: any) { }
    
    function foo9(x: B<Two, Two>);
             ~~~~
!!! error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo9(x: C<Three, Three>); // error
             ~~~~
!!! error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo9(x: any) { }
    
    function foo10(x: B<Two, Two>);
             ~~~~~
!!! error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo10(x: typeof a); // ok
             ~~~~~
!!! error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo10(x: any) { }
    
    function foo11(x: B<Two, Two>);
             ~~~~~
!!! error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11(x: typeof b); // ok
             ~~~~~
!!! error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11(x: any) { }
    
    function foo12(x: I<Five<string>, Five<string>>);
             ~~~~~
!!! error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12(x: C<Three, Three>); // error
             ~~~~~
!!! error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12(x: any) { }
    
    function foo12b(x: I2);
             ~~~~~~
!!! error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12b(x: C<Three, Three>); // ok
             ~~~~~~
!!! error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12b(x: any) { }
    
    function foo13(x: I<Five<string>, Five<string>>);
             ~~~~~
!!! error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo13(x: typeof a); // ok
             ~~~~~
!!! error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo13(x: any) { }
    
    function foo14(x: I<Five<string>, Five<string>>);
             ~~~~~
!!! error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo14(x: typeof b); // ok
             ~~~~~
!!! error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo14(x: any) { }
    
    function foo15(x: I2);
             ~~~~~
!!! error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo15(x: C<Three, Three>); // ok
             ~~~~~
!!! error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo15(x: any) { }